# differintC

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.MD  pyproject.toml  todo.md
differintC/: __init__.py  _differintC.pyi  _version.py
include/: differint.hpp
python/: CMakeLists.txt  module.cpp
src/: differint.cpp
